Booking logs & random password at register
Creates a random guid on registration, then the users should create their own password in the welcome mail -(Still not fully implemented). Updated db_schema with a booking logs table, to keep track of users entering rooms.
