# fullstack/server/Application/Models/Dtos/Auth/AuthRegisterRequestDto.cs
@@ -4,9 +4,8 @@ namespace Application.Models.Dtos;
 
 public class AuthRegisterRequestDto
 {
-    [MinLength(3)] [Required] public string Email { get; set; } = null!;
-    [MinLength(4)] [Required] public string Password { get; set; } = null!;
-    
+    [Required] public string Rfid { get; set; } = null!;
+    [Required] public string Email { get; set; } = null!;
     [Required] public string FirstName { get; set; } = null!;
     [Required] public string LastName { get; set; } = null!;
 
